--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         font-family: 'IBM Plex Sans KR', sans-serif;
         }
         body {
-            background-image: url('배경_.jpg');
+            background-image: url('배경2.jpg');
             background-color: #cccccc;
         }
 
