--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         body {
             background-image: url('배경2.jpg');
             background-color: #cccccc;
+            background-position: center;
+            background-size: cover
         }
 
         .profile{
