--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             background-image: url('배경3.jpg');
             background-color: #cccccc;
             background-position: center;
-            background-size: cover
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+
+            margin-top: 100px;
         }
 
         .profile{
