--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         body {
             background-image: url('배경3.jpg');
             background-color: #cccccc;
-            background-position: center;
+            background-position: center bottom;
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
