--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
             background-image: url('배경3.jpg');
             background-color: #cccccc;
             background-position: center bottom;
-            background-size: cover;
+            background-size: auto;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            background-size: cover;
 
             margin-top: 100px;
         }
