--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background-image: url('배경3.jpg');
             background-color: #cccccc;
             background-position: center bottom;
-            background-size: auto;
+            background-size: contain;
             background-repeat: no-repeat;
             background-attachment: fixed;
 
