--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         body {
             background-image: url('배경3.jpg');
             background-color: #cccccc;
-            background-position: center bottom;
-            background-size: contain;
+            background-position: center;
+            background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
         }
