--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <a target="_blank" href="https://naver.me/IIZBc5Jm">인천서점 젤라또 쿠폰 받으러 가기</a>
         <a target="_blank" href="https://www.instagram.com/wearesom/">S.O.M. 인스타그램 바로가기</a>
 	<a target="_blank" href="https://www.ito.or.kr/main/">인천관광공사 바로가기</a>
-        <a target="_blank" href="https://www.incheon.go.kr/IC040103">인천광역시청 바로가기</a>
+        <a target="_blank" href="https://www.incheon.go.kr/index">인천광역시청 바로가기</a>
     </div>
 </body>
 </html>
